--- a/templates/ip_address_lookup.html
+++ b/templates/ip_address_lookup.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>IP Geolocation</title>
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
  
     <style>
         body {
