--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/css/menu.css">
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
   <title>Hacking Tool Menu</title>
 
 </head>
