--- a/templates/subdomain.html
+++ b/templates/subdomain.html
@@ -3,6 +3,8 @@
 <head>
     <title>Subdomain Finder</title>
     <link rel="stylesheet" href="/static/css/subdomain.css">
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
 </head>
 <body>
     <h1>Subdomain Finder</h1>
