--- a/templates/whatismyip.html
+++ b/templates/whatismyip.html
@@ -2,6 +2,8 @@
 <html>
 <head>
  <title>IP Address Lookup</title>
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
     <style>
   /* Reset default styles */
 * {
