--- a/templates/dns_lookup.html
+++ b/templates/dns_lookup.html
@@ -2,8 +2,10 @@
 <html>
 <head>
     <title>DNS Lookup</title>
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
     <style>
-    /* Reset some default styles */
+   
 body {
     margin: 0;
     padding: 0;
