--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,8 @@
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.css" rel="stylesheet">
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.1/mdb.min.js"></script>
-<!-- Start of Async Drift Code -->
+
+<link rel="shortcut icon" href="/static/img/logo2.png">
 <script>
   "use strict";
   
@@ -89,6 +90,8 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="/menu"  target="_blank">Menu</a></li>
+        <li><a href="/signin">Sign In</a></li>
+        <li><a href="/signup">Sign Up</a></liup
       </ul>
     </div>
   </nav><br>
