--- a/templates/passwordGen.html
+++ b/templates/passwordGen.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
     <link rel="stylesheet" href="/static/css/passwordGen.css">
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
     <style>
         /* CSS for the copy to clipboard feature */
         .copy-container {
