--- a/templates/scanner.html
+++ b/templates/scanner.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="/static/css/scanner.css">
     <title>XSS Scanner</title>
+<link rel="shortcut icon" href="/static/img/logo2.png">
+
 </head>
 <body>
     <div class="container">
